--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ allprojects {
         // Check that you have the following line (if not, add it):
         google()  // Google's Maven repository
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
