--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.ismaeldivita:chip-navigation-bar:1.3.4'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.32'
+
+// https://mvnrepository.com/artifact/info.androidhive/fontawesome
+    implementation 'info.androidhive:fontawesome:0.0.5'
 }
