--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allprojects {
         google()  // Google's Maven repository
         mavenCentral()
         maven { url 'https://jitpack.io' }
+        maven { url 'https://jcenter.bintray.com/' }
     }
 }
 
