--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     implementation 'com.github.xabaras:RecyclerViewSwipeDecorator:1.3'
 // https://mvnrepository.com/artifact/info.androidhive/fontawesome
     implementation 'info.androidhive:fontawesome:0.0.5'
+    implementation 'com.github.GrenderG:Toasty:1.5.2'
 }
